Update reference to remark code

--- a/presentation/devops4productownersP2.md.html
+++ b/presentation/devops4productownersP2.md.html
@@ -982,7 +982,7 @@ GET api/moti/regions
    ####References list available for those interested in learning more
 
     </textarea>
-    <script src="assets/remark-latest.min.js">
+    <script src="https://gnab.github.io/remark/downloads/remark-latest.min.js">
     </script>
     <script>
       var slideshow = remark.create({countIncrementalSlides: false, ratio: '16:9', highlightLines: true});
